# w-scissor

./: README.md  meson.build
.github/workflows/: codeql-analysis.yml
completions/bash/: meson.build  wl-copy  ws-copy  ws-paste
completions/fish/: meson.build  wl-copy.fish  wl-paste.fish  ws-copy.fish  ws-paste.fish
completions/zsh/: _wl-copy  _wl-paste  _ws-copy  _ws-paste  meson.build
data/: meson.build  w-scissor.1  wl-clipboard.1  ws-paste.1
src/: meson.build  wl-copy.c  wl-paste.c  ws-copy.c  ws-paste.c
src/includes/: selection-protocols.h  shell-protocols.h
src/types/: copy-action.c  copy-action.h  device-manager.c  device-manager.h  device.c  device.h  keyboard.c  keyboard.h  offer.c  offer.h  popup-surface.c  popup-surface.h  registry.c  registry.h  seat.c  seat.h  shell-surface.c  shell-surface.h  shell.c  shell.h  source.c  source.h
src/util/: files.c  files.h  misc.c  misc.h  string.c  string.h
